# yt-channel-watcher

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  HOWTOUSE.md  LICENSE.md  README.md  go.mod  main.go  pyproject.toml
modules/channels/: channels.go
modules/config/: config.go
modules/download/: download.go  youtubepath.go
modules/html/: html.go
modules/videoinfo/: videoinfo.go
templates/: base.html
yt_channel_watcher/: __main__.py
yt_channel_watcher/configs/: config.yaml
yt_channel_watcher/configs/app/: app.yaml  base_app.yaml
yt_channel_watcher/configs/site_gen/: base_site_gen.yaml  site_gen.yaml
yt_channel_watcher/configs/ydl/: ydl.yaml
yt_channel_watcher/database/: database.py  video_info.py
yt_channel_watcher/filters/: already_exists.py  duplicate_check.py  filter.py
yt_channel_watcher/load_channels/: from_yaml.py  load.py
yt_channel_watcher/post_processors/: video_info_pp.py
yt_channel_watcher/site_generator/: generator.py
yt_channel_watcher/site_generator/static/: styles-bootstrap.css  styles_bootstrap.css
yt_channel_watcher/site_generator/templates/: base.html  base_bootstrap.html  index_tailwind.html
yt_channel_watcher/video_downloader/: downloader.py
ytcw/: __main__.py
ytcw/configs/app/: base_app.yaml
ytcw/configs/ydl/: base_ydl.yaml
ytcw/console/: __init__.py  application.py
ytcw/database/: __init__.py  database.py  models.py  video_info.py
ytcw/filters/: duplicate_check.py  filter.py
ytcw/load_channels/: __init__.py  from_json.py  from_yaml.py  load.py
ytcw/loggers/: ydl_logger.py
ytcw/post_processors/: video_info_pp.py
ytcw/site_generator/: __init__.py  duration_formatter.py  generator.py  site_data.py
ytcw/site_generator/templates/: about.html  (+5 more)
ytcw/video_downloader/: __init__.py  downloader.py
(+18 files in other folders)
