[tool.poetry]
name = "ytcw"
version = "0.1.0"
description = """
ytcw (yt-channel-watcher) is a program that call yt-dlp \
to fetch channels informations (videos&shorts) \
and then generate a static HTML from the video data"""
authors = ["Kovács József Miklós <kovacsjozsef7u@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mY9Yd2/yt-channel-watcher"
keywords = ["youtube", "vtubers"]

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = {version = "2024.9.14.232748.dev0", allow-prereleases = true}
sqlalchemy = "^2.0.34"
jinja2 = "^3.1.4"
rich = "^13.8.1"
typer = "^0.12.5"
strictyaml = "^1.7.3"
requests = "^2.32.3"

[tool.poetry.scripts]
ytcw = "ytcw.console.application:main"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
